--- a/BLEtest/Info.plist
+++ b/BLEtest/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Please allow Bluetooth always opened when running App</string>
 </dict>
 </plist>
